<resources>
    <string name="app_name">PwòfPam</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="strProfile">"Profile "</string>
    <string name="sendComment">Send your comment</string>
    <string name="AvisFreelancer">Freelancer review</string>
    <string name="strAccount">Account</string>
    <string name="strAbout">About</string>
    <string name="strCreateInvoice">Create an invoice</string>
    <string name="strAllReview">All review</string>
    <string name="strMessage">Message</string>
    <string name="strFavorite">Favorite</string>
    <string name="strFreelancerInfo">Freelancer Information</string>
    <string name="strHelp">Help and Comments</string>
    <string name="strPictureUpload">Upload a picture</string>
    <string name="strPaymentMethod">Payment History</string>
    <string name="strPersonnalInfo">Personnal Information</string>
    <string name="strEditAccount">Edit Account</string>
    <string name="strSetting">Settings</string>
    <string name="strUploadPaidDoc">Upload paid document</string>
    <string name="strUploadFreeDoc">Upload free document</string>
    <string name="strProfilePicture">Profile picture</string>
    <string name="strTopFreelancer">Top Tutor</string>
    <string name="strAcademicInfo">Academic Information</string>
    <string name="strSearchFreelancer">Freelancer Search</string>
    <string name="privacySettings">Privacy settings</string>
    <string name="strLanguage">Language</string>
    <string name="StrUserDataPolicy">User data policy</string>
    <string name="strTermsOfUse">Terms of use</string>
    <string name="strCopyright">Copyright</string>
    <string name="Edit">Edit</string>
    <string name="AboutUs">About us</string>
    <string name="userName">UserName</string>
    <string name="Logout">Logout</string>
    <string name="AccountType"> Account Type</string>
    <string name="Rules1">Student has limited access to the platform. They can only check for freelancer and load paid document from professor</string>
    <string name="Rules2">Freelancer can be a student and also be paid to help a student in a particular subject.</string>
    <string name="Rules3">A professor has the access of both a student and a freelancer in addition of being able to load paid documents on the platform.</string>

</resources>