<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/couleur4"
        android:minHeight="?attr/actionBarSize"
        android:paddingLeft="30dp"
        android:paddingRight="20dp"
        android:theme="?attr/actionBarTheme"
        app:subtitleTextColor="@color/couleur1"
        app:title="@string/strSetting"
        app:titleTextColor="@color/couleur1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="45dp"
        android:paddingTop="70dp"
        android:paddingRight="45dp">

        <TextView
            android:id="@+id/id_confidentialite_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:drawableLeft="@drawable/privacy"
            android:drawablePadding="5dp"
            android:shadowColor="@color/couleur4"
            android:text="@string/privacySettings"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="15dp"
            android:background="@color/couleur4" />

        <TextView
            android:id="@+id/id_langue_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:drawableLeft="@drawable/language"
            android:drawablePadding="5dp"
            android:shadowColor="@color/couleur4"
            android:text="@string/strLanguage"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="15dp"
            android:background="@color/couleur4" />

        <TextView
            android:id="@+id/id_conditionUtilisation_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:drawableLeft="@drawable/conditions"
            android:drawablePadding="5dp"
            android:shadowColor="@color/couleur4"
            android:text="@string/strTermsOfUse"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="15dp"
            android:background="@color/couleur4" />

        <TextView
            android:id="@+id/id_politique_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="5dp"
            android:shadowColor="@color/couleur4"
            android:text="@string/StrUserDataPolicy"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="15dp"
            android:background="@color/couleur4" />

        <TextView
            android:id="@+id/id_copyright_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:drawableLeft="@drawable/copyright"
            android:drawablePadding="5dp"
            android:shadowColor="@color/couleur4"
            android:text="@string/strCopyright"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="15dp"
            android:background="@color/couleur4" />
    </LinearLayout>

</LinearLayout>